<resources>
    <!--Activities-->
    <string name="app_name">Страховые осмотры</string>
    <string name="action_login">Логин</string>
    <string name="setting_login">Логин</string>
    <string name="action_settings">Настройки</string>
    <string name="title_activity_vehicle_damage_plan">План повреждений</string>
    <string name="preInsurance">Предстраховой осмотр</string>
    <string name="Incident">Страховой случай (ДТП)</string>
    <string name="title_activity_forms_list">Список актов</string>
    <string name="title_activity_free_draw">Рисование стилусом</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Пароль</string>
    <string name="action_sign_in">Войти или зарегистрироваться</string>
    <string name="action_sign_in_short">Войти</string>
    <string name="error_invalid_email">Email неверный</string>
    <string name="error_invalid_password">Пароль слишком короткий</string>
    <string name="error_incorrect_password">Пароль неверный</string>
    <string name="error_field_required">Поле обязательно</string>
    <string name="title_activity_anima">Анимация</string>
    <string name="title_activity_photos">Фотографии</string>
    <string name="title_activity_server_emu">Server Emulator</string>
    <string name="no_account">Нет аккаунта?</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="sign_in">Войти</string>


    <!--PreInsurance-->
    <string name="general">Заявление на проведение осмотра имущества</string>
    <string name="object_of_insurance">Объект страхования</string>
    <string name="documents">Документы по объекту</string>
    <string name="photo">Фотографии</string>
    <string name="insured">Застрахованные</string>

    <!--AcceptReject-->
    <string name="call"> Звонок</string>
    <string name="on_map"> На Карте</string>
    <string name="decline"> Отклонить</string>
    <string name="accept"> Принять</string>
    <string name="send_sms">Отправить СМС</string>
    <string name="delay">Отложить</string>

    <!--Insurance-->
    <string name="general_info">Общие данные</string>
    <string name="additional_info">Дополнительная информация по делу</string>
    <string name="participants_info">Данные по участникам</string>
    <string name="objects_info">Данные по объектам</string>
    <string name="photos_and_documents">Фотографии (документы) по делу</string>
    <string name="signature">Подпись</string>
    <string name="signatures">Подписи</string>
    <string name="event_description">Описание событий</string>

    <string-array name="cars_array">
        <item>Машина</item>
        <item>Грузовик</item>
        <item>Автобус</item>
        <item>Мотоцикл</item>
    </string-array>

    <string name="title_activity_gallery">Gallery</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">Получать уведомления</string>

    <string name="pref_title_ringtone">Мелодия</string>
    <string name="pref_ringtone_silent">Без звука</string>

    <string name="pref_title_vibrate">Вибрация</string>


    <!--SMS templates-->
    <string name="accept_sms">Аварком %1$s выехал на место ДТП</string>
    <string name="delay_sms">Аварком %1$s выедет через %2$d минут</string>
    <string name="title_activity_maps">Map</string>

    <string name="title_info">информация</string>

    <string name="device_alert">Введите название устройства, например \'Samsung s5\' или \'Планшет Арман\'.
        Это необходимо для возможности блокировки устройства при потере.</string>

    <!--Work progress-->
    <string name="work_star">НАЧАЛО ОСМОТРА</string>
    <string name="work_end">КОНЕЦ ОСМОТРА</string>
    <string name="work_finish">ЗАВЕРШЕНИЕ РАБОТЫ</string>
    <string name="work_export">ЭКСПОРТ В PDF</string>
    <string name="work_progress_title">Статус осмотра</string>
</resources>
