<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/textHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:gravity="center_horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonAccept"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_done_black_24dp"
            android:text="@string/accept" />
        <View
            android:layout_marginBottom="6dp"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#FFBABABA" />

        <Button
            android:id="@+id/buttonDelay"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_access_alarms_black_24dp"
            android:text="@string/delay" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#FFBABABA" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonReject"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:drawableLeft="@drawable/ic_clear_black_24dp1"
            android:text="@string/decline" />

        <View
            android:layout_marginTop="6dp"
            android:paddingTop="6dp"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#FFBABABA" />
        <Button
            android:id="@+id/buttonCall"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:drawableLeft="@drawable/ic_call_black_24dp"
            android:text="@string/call" />

    </LinearLayout>
    <View
        android:layout_marginTop="6dp"
        android:background="@color/colorDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <Button
        android:id="@+id/buttonMap"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_pin_drop_black_24dp"
        android:text="@string/on_map" />

</LinearLayout>