<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/work_progress_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="0dp"
    android:orientation="vertical"
    android:padding="0dp">


    <Button
        android:id="@+id/work_stars"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:drawableLeft="@drawable/ic_alarm_add_black_24dp"
        android:drawablePadding="8dp"
        android:padding="16dp"
        android:text="@string/work_star"  />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/opacity_divider" />

    <Button
        android:id="@+id/work_end"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_alarm_black_24dp"
        android:drawablePadding="8dp"
        android:padding="16dp"
        android:text="@string/work_end"  />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/opacity_divider" />

    <Button
        android:id="@+id/work_finish"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_alarm_on_black_24dp"
        android:drawablePadding="8dp"
        android:padding="16dp"
        android:text="@string/work_finish"  />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/opacity_divider" />

    <Button
        android:id="@+id/pdf_button"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_alarm_on_black_24dp"
        android:drawablePadding="8dp"
        android:padding="16dp"
        android:text="@string/work_export"  />

</LinearLayout>