<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".IncidentFormActivity">

    <android.support.v7.widget.RecyclerView
        android:visibility="gone"
        android:id="@+id/card_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="180dp"
        android:scrollbars="vertical" />

    <ListView
        android:layout_marginTop="180dp"
        android:id="@+id/reports"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/AButtonGeneral"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/general_info"
                android:textSize="10sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:background="@color/opacity_divider" />

            <Button
                android:id="@+id/menuPhotos"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/photos_and_documents"
                android:textSize="10sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/opacity_divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/menuObjects"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/objects_info"
                android:textSize="10sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:background="@color/opacity_divider" />

            <Button
                android:id="@+id/menuParticipants"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/participants_info"
                android:textSize="10sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/opacity_divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/menuDescription"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/event_description"
                android:textSize="10sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:background="@color/opacity_divider" />

            <Button
                android:id="@+id/menuExtraInfo"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/additional_info"
                android:textSize="10sp" />
        </LinearLayout>

    </LinearLayout>

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/adikToolbar"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_margin="0dp"
            android:background="@drawable/header_romoe"
            android:foreground="@drawable/rectangle"
            android:minHeight="?attr/actionBarSize"
            android:padding="0dp"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textHeader"
                    style="?android:textAppearanceLarge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    tools:text="test" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/call_center_adik"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layoutDirection="rtl"
                        android:src="@drawable/call_center_worker"
                        android:tint="@android:color/white" />

                    <ImageButton
                        android:id="@+id/call_adik"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layoutDirection="rtl"
                        android:src="@drawable/ic_call_black_24dp"
                        android:tint="@android:color/white" />

                    <ImageButton
                        android:id="@+id/map_adik"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layoutDirection="rtl"
                        android:src="@drawable/ic_pin_drop_black_24dp"
                        android:tint="@android:color/white" />

                    <ImageButton
                        android:id="@+id/ready_adik"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layoutDirection="rtl"
                        android:src="@drawable/ic_done_black_24dp"
                        android:tint="@android:color/white" />
                </LinearLayout>
            </RelativeLayout>
        </android.support.v7.widget.Toolbar>

        <!--<TextView-->
        <!--android:id="@+id/textHeader"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text=""-->
        <!--android:textAlignment="center" />-->

    </android.support.design.widget.AppBarLayout>
</android.support.design.widget.CoordinatorLayout>